[Bug 3034] Button of search widget is too wide in IE6, r=bernd
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/realty/trunk@24576 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/pi1/tx_realty_pi1.tpl.css
+++ b/pi1/tx_realty_pi1.tpl.css
@@ -48,6 +48,7 @@
 	line-height: 18px;
 	color: #ffffff;
 	padding-right: 10px;
+	margin-right: -1px; /* IE hack */
 }
 
 /* Images in result list and single view */
@@ -489,6 +490,10 @@ p.tx-realty-pi1-objekt-nr {
 }
 
 /***** FILTER FORM *****/
+.tx-realty-pi1-filter-form {
+	width: 500px;
+}
+
 .tx-realty-pi1-filter-form .tx-realty-pi1-label {
 	width: 250px;
 }
